update user and fixes
